--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,33 @@
 .DS_Store
 .config/.DS_Store
 .gitattributes
-.antigen/bundles
-.antigen_freebsd/bundles
-.antigen_macos/bundles
+
+.antigen_freebsd/.antigen/bundles/robbyrussell/oh-my-zsh
+
+.antigen_freebsd/.antigen/bundles/romkatv/powerlevel10k
+
+.antigen_freebsd/.antigen/bundles/zdharma-continuum/fast-syntax-highlighting
+
+.antigen_freebsd/.antigen/bundles/zsh-users/zsh-autosuggestions
+
+.antigen_freebsd/.antigen/bundles/zsh-users/zsh-completions
+
+.antigen_macos/.antigen/bundles/robbyrussell/oh-my-zsh
+
+.antigen_macos/.antigen/bundles/romkatv/powerlevel10k
+
+.antigen_macos/.antigen/bundles/zdharma-continuum/fast-syntax-highlighting
+
+.antigen_macos/.antigen/bundles/zsh-users/zsh-autosuggestions
+
+.antigen_macos/.antigen/bundles/zsh-users/zsh-completions
+
+.antigen_macos/.antigen/bundles/zsh-users/zsh-syntax-highlighting
+
+.antigen/bundles/robbyrussell/
+
+.antigen/bundles/romkatv/
+
+.antigen/bundles/zdharma-continuum/
+
+.antigen/bundles/zsh-users/
